--- a/www/style/style.css
+++ b/www/style/style.css
@@ -53,7 +53,26 @@
   border-radius: 4px;
 }
 
+#categoriaMin{
+  border-radius: 4px;
+}
+
+#categoriaMin{
+  border-radius: 4px;
+}
+
+#categoriaMax{
+  border-radius: 4px;
+}
+
 #categoriaInput{
   border-radius: 4px;
+}
+
+.error{
+  color: red;
+  text-transform: uppercase;
+  font-size: 1.5vh;
+  font-weight: 700;
 }
 
