--- a/www/style/style.css
+++ b/www/style/style.css
@@ -33,7 +33,17 @@
 }
 
 .infox-box-analise-individual .shiny-bound-output{
-  width: 20%;
+  width: 16.667%;
+}
+
+.infox-box-analise-individual .small-box {
+  border-radius: 5px;
+}
+
+.infox-box-analise-individual .small-box .icon-large {
+ font-size: 50px;
+ bottom: 18px;
+ right: 15px;
 }
 
 .sidebar-menu{
@@ -70,10 +80,9 @@
 }
 
 .error{
-  color: red;
   text-transform: uppercase;
   font-size: 1.5vh;
-  font-weight: 700;
+  color: #800000;
 }
 
 .container-categoria-input{
@@ -119,5 +128,9 @@
   background-color: green;
   border-radius: 5px;
   width: 100%;
+}
+
+.panel-primary{
+  border-color: green !important;
 }
 
